	RRSIG RRs in replies caused DNSSEC validation to fail even
	when the RRs do not require validation because the zone is
	unsigned. Note that, at the time of this commit, Google
	DNS appears to have the same bug, so if you're using 8.8.8.8
	or friends as upstream, resolving the broken zones
	(eg rivcoed.org) will still fail. Thanks to Petr Menšík
	for the bug report.

	
version 2.92
        Redesign the interaction between DNSSEC validation and per-domain
	servers, specified as --server=/<domain>/<ip-address>. This should
	just work in all cases now. If the normal chain-of-trust exists into
	the delegated domain then whether the domain is signed or not, DNSSEC
	validation will function normally. In the case the delegated domain
	is an "overlay" on top of the global DNS and no NS and/or DS records
	exist connecting it to the global dns, then if the domain is
	unsigned the situation will be handled by synthesising a
	proof-of-non-existence-of-DS for the domain and queries will be
	answered unvalidated; this action will be logged. A signed domain
	without chain-of-trust can be validated if a suitable trust-anchor
	is provided using --trust-anchor. This change should be backwards
	compatible for all existing working configurations; it extends the
	space of possible configurations which are functional.

	Fix a couple of problems with DNSSEC validation and DNAME. One
	could cause validation failure on correct domains, and the other
	would fail to spot an invalid domain. Thanks to Graham Clinch
	for spotting the problem.

	Add --log-queries=auth option to only log replies from the auth DNS
	facility.

	Fix some edge-cases with domains and --address and --server. There
	has been some regressions with this in previous releases. This change
	fixes the priority order from lower to highest as:
	--address with a IPv4 or IPv6 address (as long as the query matches the type)
        --address with # for all-zeros, as long as the query is A or AAAA)